# 3commas-rs

./: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  release-please-config.json  renovate.json
.github/workflows/: ci.yml  release-please.yml
crates/client/: CHANGELOG.md  Cargo.toml
crates/client/src/: deals.rs  errors.rs  lib.rs  middleware.rs
crates/client/src/middleware/: request_limiter.rs
crates/scraper/: CHANGELOG.md  Cargo.toml
crates/scraper/src/: cache.rs  decimal_gauge.rs  error.rs  gauges.rs  main.rs  metric.rs  server_tracing.rs  telegraf.rs
crates/scraper/src/cache/: cached.rs
crates/types/: CHANGELOG.md  Cargo.toml
crates/types/src/: account.rs  bots.rs  common.rs  lib.rs  pair.rs
crates/types/src/bots/: deals.rs  stats.rs
