[package]
name = "three-commas-scraper"
version = "0.2.5"
edition = "2021"
description = "3commas scraper"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/3commas-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.52"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0-rc.3", features = ["derive", "env"] }
color-eyre = "0.5"
crossbeam = "0.8.1"
futures = "0.3.18"
hex = "0.4.3"
im = "15.0.0"
prometheus = "0.13.0"
rust_decimal = "1.18.0"
tide = { version = "0.16.0", default-features = false, features = [
  "h1-server",
] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.3", features = ["json", "env-filter"] }

three-commas-client = { version = "0.2.2", path = "../client" }
