[package]
name = "three-commas-scraper"
version = "0.2.7"
edition = "2021"
description = "3commas scraper"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/3commas-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = "0.1.56"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive", "env"] }
color-eyre = "0.6"
crossbeam = "0.8.1"
futures = "0.3.21"
hex = "0.4.3"
im = "15.1.0"
prometheus = "0.13.1"
rust_decimal = "1.25.0"
tide = { version = "0.16.0", default-features = false, features = [
  "h1-server",
] }
tracing = "0.1.35"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.14", features = ["json", "env-filter"] }

three-commas-client = { version = "0.2.4", path = "../client" }
