[package]
name = "three-commas-scraper"
version = "0.2.7"
edition = "2021"
description = "3commas scraper"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/3commas-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-std = { version = "1.11.0", features = ["attributes"] }
async-trait = "0.1.63"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive", "env"] }
color-eyre = "0.6"
crossbeam = "0.8.2"
futures = "0.3.26"
hex = "0.4.3"
im = "15.1.0"
prometheus = "0.13.3"
rust_decimal = "1.26.1"
tide = { version = "0.16.0", default-features = false, features = [
  "h1-server",
] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }

three-commas-client = { version = "0.2.4", path = "../client" }
