[package]
name = "three-commas-types"
version = "0.1.0"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
smol_str = { version = "0.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
