[package]
name = "three-commas-types"
version = "0.1.0"
edition = "2021"
description = "3commas api types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/3commas-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
smol_str = { version = "0.1", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
